--- a/src/components/result/Result.css
+++ b/src/components/result/Result.css
@@ -104,6 +104,7 @@
 .result-container span:nth-child(1) {
     margin-left: 25px;
     flex: 5;
+    color: inherit;
 }
 
 .result-container span:nth-child(2) {
