--- a/src/components/sidebar/Sidebar.css
+++ b/src/components/sidebar/Sidebar.css
@@ -1,5 +1,5 @@
 .sidebar-container {
-    width: 25%;
+    width: 22%;
     min-height: 100vh;
     border-right: 1px solid #1CA152;
     position: relative;
@@ -24,7 +24,7 @@
 
 .sidebar-container .title {
     margin-top: 40px;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: flex-end;
     font-size: 17px;
     color: #1CA152;
